fixed syntax error

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
          Золотаренко евгения александровна
        </div>
        <div class="photo">
-          <img alt="Photo" src="img/photo_my.jpg" width="200" height="198px">
+          <img alt="Photo" src="img/photo_my.jpg" width="200" height="198">
        </div>
        <div class="work">
         Счастливая мама в декретном отпуске
