--- a/Practice/HW1/index.html
+++ b/Practice/HW1/index.html
@@ -33,5 +33,13 @@
        <div class="info">Мой фидбек:</div>
        <p>Заборы строить не умею</p>
    </div>
+
+<p>
+<a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Правильный CSS!" />
+    </a>
+</p>
  </body>
 </html>
