--- a/Practice/HW2/index.html
+++ b/Practice/HW2/index.html
@@ -38,7 +38,16 @@
 
         <div class="content">
             <div class="content_picture"></div>
-            <div class="content_text"></div>
+            <div class="content_text">
+                Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні.
+                Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар
+                взяв шрифтову гранку та склав на ній підбірку зразків шрифтів.
+                "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні,
+                залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки
+                виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки
+                програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні
+                версії Lorem Ipsum.
+            </div>
         </div>
 
     </div>
