Home work 2. Added Footer

--- a/Practice/HW2/index.html
+++ b/Practice/HW2/index.html
@@ -15,8 +15,8 @@
                  <li class="item_1"><a href="#"></a>
             </li><li class="item_2 active"><a href="#"></a>
             </li><li class="item_3"><a href="#"></a>
-            </li><li class="item_4"><a href="#"></a></li>
-            <!--<li class="item"><span class="empty"></span></li>-->
+            </li><li class="item_4"><a href="#"></a>
+            </li><li class="item"><a href="#"></a></li>
         </ul>
         <div class="line left_line"></div>
         <div class="line right_line"></div>
@@ -57,11 +57,11 @@
     <!--FOOTER-->
     <div class="footer">
         <ul class="main_menu footer_menu">
-            <li><a href="#">Главная</a></li>
-            <li class="active"><a href="#">Товары</a></li>
-            <li><a href="#">О_нас</a></li>
-            <li><a href="#">Контакты</a></li>
-
+                <li><a href="#">Главная</a>
+            </li><li class="active"><a href="#">Товары</a>
+            </li><li><a href="#">О_нас</a>
+            </li><li><a href="#">Контакты</a>
+            </li><li class="rights">2014 &#169; All rights reserved</li>
         </ul>
     </div>
 
