--- a/Practice/HW2/index.html
+++ b/Practice/HW2/index.html
@@ -9,59 +9,58 @@
 <body>
 <div class="container">
     <!--HEADER-->
-    <div class="header">
-        <div class="header_logo"></div>
-        <ul class="main_menu header_menu">
-                 <li class="item_1"><a href="#"></a>
-            </li><li class="item_2 active"><a href="#"></a>
-            </li><li class="item_3"><a href="#"></a>
-            </li><li class="item_4"><a href="#"></a>
-            </li><li class="item"><a href="#"></a></li>
-        </ul>
-        <div class="line left_line"></div>
-        <div class="line right_line"></div>
-    </div>
-
-    <!--CONTENT-->
-    <div class="wraper">
-        <ul class="left_menu">
-            <li><a href="#">Ноутбуки</a></li>
-            <li><a href="#">Планшеты</a>
-            <li><a href="#">Телефоны</a></li>
-            <li><a href="#">Телевизоры</a></li>
-            <li><a href="#">Бытовая техника</a></li>
-            <li><a href="#">Автотовары</a></li>
-        </ul>
-
-        <div class="content">
-            <div class="content_picture"></div>
-            <div class="content_text">
-                Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні.
-                Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар
-                взяв шрифтову гранку та склав на ній підбірку зразків шрифтів.
-                "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні,
-                залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки
-                виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки
-                програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні
-                версії Lorem Ipsum.
-            </div>
+    <div class="content">
+        <div class="header">
+            <div class="header_logo"></div>
+            <ul class="main_menu header_menu">
+                     <li class="item item_1"><a href="#">Главная</a>
+                </li><li class="item item_2"><a href="#">Товары</a>
+                </li><li class="item item_3"><a href="#">О нас</a>
+                </li><li class="item item_4"><a href="#">Контакты</a>
+            <div class="line left_line"></div>
+            <div class="line right_line"></div>
         </div>
 
-    </div>
+    <!--CONTENT-->
+        <div class="wraper">
+            <ul class="left_menu">
+                <li><a href="#">Ноутбуки</a></li>
+                <li><a href="#">Планшеты</a>
+                <li><a href="#">Телефоны</a></li>
+                <li><a href="#">Телевизоры</a></li>
+                <li><a href="#">Бытовая техника</a></li>
+                <li><a href="#">Автотовары</a></li>
+            </ul>
+
+
+                <div class="content_picture"><img src="img/content_picture.jpg"></div>
+                <div class="content_text">
+                    Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні.
+                    Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар
+                    взяв шрифтову гранку та склав на ній підбірку зразків шрифтів.
+                    "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні,
+                    залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки
+                    виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки
+                    програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні
+                    версії Lorem Ipsum.
+                </div>
+            </div>
+
+
 
 
 
     <!--FOOTER-->
-    <div class="footer">
-        <ul class="main_menu footer_menu">
-                <li><a href="#">Главная</a>
-            </li><li class="active"><a href="#">Товары</a>
-            </li><li><a href="#">О_нас</a>
-            </li><li><a href="#">Контакты</a>
-            </li><li class="rights">2014 &#169; All rights reserved</li>
-        </ul>
+        <div class="footer">
+            <ul class="main_menu footer_menu">
+                    <li><a href="#">Главная</a>
+                </li><li><a href="#">Товары</a>
+                </li><li><a href="#">О_нас</a>
+                </li><li><a href="#">Контакты</a>
+                </li><li class="rights">2014 &#169; All rights reserved</li>
+            </ul>
+        </div>
     </div>
-
 </div>
 
 
