--- a/Practice/HW3/index.html
+++ b/Practice/HW3/index.html
@@ -9,6 +9,7 @@
 <body>
 <div class="container">
     <div class="alltogether">
+
     <!--HEADER-->
         <div class="header">
             <div class="header_logo"></div>
@@ -17,8 +18,6 @@
                 </li><li class="item item_2"><a href="#">Товары</a>
                 </li><li class="item item_3"><a href="#">О нас</a>
                 </li><li class="item item_4"><a href="#">Контакты</a>
-            <div class="line left_line"></div>
-            <div class="line right_line"></div>
         </div>
 
     <!--CONTENT-->
@@ -33,9 +32,8 @@
             </ul>
 
 
-                <div class="content_picture"><img src="img/content_picture.jpg"></div>
-                <div class="content_text">
-                    Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні.
+            <div class="content_picture"><img src="img/content_picture.jpg"></div>
+            <div class="content_text">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні.
                     Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар
                     взяв шрифтову гранку та склав на ній підбірку зразків шрифтів.
                     "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні,
@@ -43,12 +41,8 @@
                     виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки
                     програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні
                     версії Lorem Ipsum.
-                </div>
+            </div>
          </div>
-
-
-
-
 
     <!--FOOTER-->
         <div class="footer">
@@ -62,6 +56,5 @@
         </div>
     </div>
 </div>
-
 
 </body>
