--- a/Practice/HW4/index.html
+++ b/Practice/HW4/index.html
@@ -9,30 +9,100 @@
 <body>
  <div class="wraper">
     <!--HEADER-->
-    <div class="header">
+    <div class="header clearfix">
         <div class="contacts">
-            <div class="contact_us txt">Наши контакты:</div>
-            <div class="contact_info txt">
-                +9-098-765-4321 <br>
-                +9-0123-456-890 <br>
-                info@asia-holidays.com
+            <div class="contact_us">Наши контакты:</div>
+            <div class="contact_info">+9-098-765-4321 <br>
+                                      +9-0123-456-890 <br>
+                                      info@asia-holidays.com
             </div>
         </div>
 
         <div class="logo"><img src="img/logo.png" alt=""></div>
 
         <ul class="countries">
-            <li class="country_flag Maldives"><a class="country_name txt">Мальдивы</a></li>
-            <li class="country_flag Sri_Lanka"><a class="country_name txt">Ланка</a></li>
-            <li class="country_flag Bhutan"><a class="country_name txt">Бутан</a></li>
-            <li class="country_flag Tibet"><a class="country_name txt">Тибет</a></li>
-            <li class="country_flag Nepal"><a class="country_name txt">Непал</a></li>
-            <li class="country_flag India"><a class="country_name txt">Индия</a></li>
+            <li class="country"><a href="#" class="country_flag Maldives">Мальдивы</a></li>
+            <li class="country"><a href="#" class="country_flag Sri_Lanka">Шри-Ланка</a></li>
+            <li class="country"><a href="#" class="country_flag Bhutan">Бутан</a></li>
+            <li class="country"><a href="#" class="country_flag Tibet">Тибет</a></li>
+            <li class="country"><a href="#" class="country_flag Nepal">Непал</a></li>
+            <li class="country"><a href="#" class="country_flag India">Индия</a></li>
         </ul>
     </div>
 
     <div class="photo"></div>
 
+    <ul class="main_menu">
+         <li class="item"><a href="#" class="menu_name">Главная</a></li>
+         <li class=><a href="#" class="menu_name down">Путешествие</a>
+             <ul class="submenu">
+                 <li><a href="#" class="menu_name submenu_name">Путешествие1</a></li>
+                 <li><a href="#" class="menu_name submenu_name">Путешествие2</a></li>
+                 <li><a href="#" class="menu_name submenu_name">Путешествие3</a></li>
+                 <li><a href="#" class="menu_name submenu_name">Путешествие4</a></li>
+                 <li><a href="#" class="menu_name submenu_name">Путешествие5</a></li>
+             </ul>
+         </li>
+         <li class=""><a href="#" class="menu_name down">Услуги</a>
+             <ul class="submenu">
+                 <li><a href="#" class="menu_name submenu_name">Услуги1</a></li>
+                 <li><a href="#" class="menu_name submenu_name">Услуги2</a></li>
+                 <li><a href="#" class="menu_name submenu_name">Услуги3</a></li>
+             </ul>
+         </li>
+         <li class=""><a href="#" class="menu_name down">Партнерам</a>
+             <ul class="submenu">
+                 <li><a href="#" class="menu_name submenu_name">Партнерам1</a></li>
+                 <li><a href="#" class="menu_name submenu_name">Партнерам2</a></li>
+                 <li><a href="#" class="menu_name submenu_name">Партнерам3</a></li>
+                 <li><a href="#" class="menu_name submenu_name">Партнерам4</a></li>
+             </ul>
+         </li>
+         <li><a href="#" class="menu_name">Отзывы клиентов</a></li>
+         <li><a href="#" class="menu_name">О нас</a></li>
+         <li><a href="#" class="menu_name">Контакты</a></li>
+     </ul>
+
+    <div class="central clearfix">
+        <div class="column left_column">
+            <div class="title">Информация</div>
+            Lorem ipsum dolor sit amet
+            Lorem ipsum dolor sit amet
+            Lorem ipsum dolor sit amet
+            Lorem ipsum dolor sit amet
+            Lorem ipsum dolor sit amet
+            Lorem ipsum dolor sit amet
+            Lorem ipsum dolor sit amet
+            Lorem ipsum dolor sit amet
+        </div>
+
+        <div class="column right_column">
+            <div class="title">Новости</div>
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+                Lorem ipsum dolor sit amet
+        </div>
+
+        <div class="center_column"></div>
+    </div>
  </div>
 
 
