Home Work 4. Modified central part.

--- a/Practice/HW4/index.html
+++ b/Practice/HW4/index.html
@@ -63,6 +63,8 @@
          <li><a href="#" class="menu_name">Контакты</a></li>
      </ul>
 
+
+     <!--CENTRAL PART-->
     <div class="central clearfix">
         <div class="column left_column">
             <div class="title">Информация</div>
@@ -92,20 +94,12 @@
                 Lorem ipsum dolor sit amet
                 Lorem ipsum dolor sit amet
                 Lorem ipsum dolor sit amet
-                Lorem ipsum dolor sit amet
-                Lorem ipsum dolor sit amet
-                Lorem ipsum dolor sit amet
-                Lorem ipsum dolor sit amet
-                Lorem ipsum dolor sit amet
-                Lorem ipsum dolor sit amet
-                Lorem ipsum dolor sit amet
         </div>
 
         <div class="center_column"></div>
     </div>
  </div>
 
-
 <!--COPYRIGHT-->
-<div class="copyright txt">Copyright (c) asia-holidays.com. 2010</div>
+  <div class="copyright txt">Copyright (c) asia-holidays.com. 2010</div>
 </body>
