Home Work 4. Moved photo img  from css to index.

--- a/Practice/HW4/index.html
+++ b/Practice/HW4/index.html
@@ -30,7 +30,9 @@
         </ul>
     </div>
 
-    <div class="photo"></div>
+    <div class="photo">
+        <img src="img/photo.jpg" alt="">
+    </div>
 
     <ul class="main_menu">
          <li class="item"><a href="#" class="menu_name">Главная</a></li>
