Home Work 4. Fixed syntax errors

--- a/Practice/HW4/index.html
+++ b/Practice/HW4/index.html
@@ -35,8 +35,8 @@
     </div>
 
     <ul class="main_menu">
-         <li class="item"><a href="#" class="menu_name">Главная</a></li>
-         <li class=><a href="#" class="menu_name down">Путешествие</a>
+         <li><a href="#" class="menu_name">Главная</a></li>
+         <li><a href="#" class="menu_name down">Путешествие</a>
              <ul class="submenu">
                  <li><a href="#" class="menu_name submenu_name">Путешествие1</a></li>
                  <li><a href="#" class="menu_name submenu_name">Путешествие2</a></li>
@@ -45,14 +45,14 @@
                  <li><a href="#" class="menu_name submenu_name">Путешествие5</a></li>
              </ul>
          </li>
-         <li class=""><a href="#" class="menu_name down">Услуги</a>
+         <li><a href="#" class="menu_name down">Услуги</a>
              <ul class="submenu">
                  <li><a href="#" class="menu_name submenu_name">Услуги1</a></li>
                  <li><a href="#" class="menu_name submenu_name">Услуги2</a></li>
                  <li><a href="#" class="menu_name submenu_name">Услуги3</a></li>
              </ul>
          </li>
-         <li class=""><a href="#" class="menu_name down">Партнерам</a>
+         <li><a href="#" class="menu_name down">Партнерам</a>
              <ul class="submenu">
                  <li><a href="#" class="menu_name submenu_name">Партнерам1</a></li>
                  <li><a href="#" class="menu_name submenu_name">Партнерам2</a></li>
@@ -104,4 +104,11 @@
 
 <!--COPYRIGHT-->
   <div class="copyright txt">Copyright (c) asia-holidays.com. 2010</div>
+ <p>
+     <a href="http://jigsaw.w3.org/css-validator/check/referer">
+         <img style="border:0;width:88px;height:31px"
+              src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+              alt="Правильный CSS!" />
+     </a>
+ </p>
 </body>
