Home Work 5. Fixed errors

--- a/Practice/HW5/index.html
+++ b/Practice/HW5/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
     <title>Home Work 4</title>
     <meta charset="utf-8">
@@ -26,11 +27,9 @@
             <div class="Cadastre">
                 <div class="Cadastre_header">Cadastre-se</div>
                 <div class="Cadastre_form">
-                    <!--<div class="facebook_lolin">-->
-                    <a class="facebook_lolin" href="#"><img src="img/Registration_Facebook-login.png"></a>
-                    <!--</div>-->
+                    <a class="facebook_lolin" href="#"><img src="img/Registration_Facebook-login.png" alt="Registration from Facebook"></a>
                     <div class="OU">OU</div>
-                    <form action="" class="reg_form">
+                    <form action="/" class="reg_form">
                         <input type="text" name="first_name" placeholder="First Name" class="reg_field">
                         <input type="text" name="last_name" placeholder="Last Name" class="reg_field">
                         <input type="email" name="email" placeholder="Email Address" class="reg_field">
@@ -43,16 +42,8 @@
                         <div class="agree">By clicking the button above, you agree to the Terms of Service
                             Xiew our Privacy Policy.</div>
                     </form>
-
-
-
-
-
                 </div>
             </div>
         </div>
-
-
-
     </div>
 </body>
