Home Work 6. Header. Main menu

--- a/Practice/HW6/index.html
+++ b/Practice/HW6/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <header class="">
+    <header>
         <div class="info clearfix">
             <div class="phone"></div>
             <div class="phone_numbers">(044)123-45-67 (044)567-89-10</div>
@@ -28,6 +28,23 @@
         </div>
 
         <img src="img/header_logo.jpg" alt="" class="logo">
+
+        <div class="header_menu">
+            <nav>
+                <ul class="main_menu">
+                    <li class=""><a href="#" class="main_menu-item about_company">о компании</a></li>
+                    <li class=""><a href="#" class="main_menu-item payment">оплата</a></li>
+                    <li class=""><a href="#" class="main_menu-item ship">доставка</a></li>
+                    <li class=""><a href="#" class="main_menu-item articles">статьи</a></li>
+                    <li class=""><a href="#" class="main_menu-item contacts">контакты</a></li>
+                </ul>
+            </nav>
+            <div class="korzina">
+                <a href="#" class="korzina_pict"><img src="img/header_menu_korzina.png"></a> <span class="commodity">товаров: </span><a href="#" class="quantity">0</a>
+                <span class="sum_text">на сумму:</span> <span class="sum">0,00 грн.</span>
+            </div>
+
+        </div>
     </header>
 
     <section class="search">
