--- a/Practice/HW6/index.html
+++ b/Practice/HW6/index.html
@@ -14,8 +14,8 @@
 
             <div class="avtoriz">
                 <form>
-                    <input type="text" name="login" placeholder="логин" class="field login_field">
-                    <input type="password" name="psw" placeholder="пароль" class="field psw_field">
+                    <input type="text" name="login" placeholder="логин" class="avtoriz_field login_field">
+                    <input type="password" name="psw" placeholder="пароль" class="avtoriz_field psw_field">
                 </form>
                     <span class="vhod"> <a href="#" class="vhod">вход</a> | <a href="#" class="vhod">регистрация</a></span>
                     <a href="#" class="fogot_psw">забыли пароль?</a>
@@ -43,13 +43,32 @@
                 <a href="#" class="korzina_pict"><img src="img/header_menu_korzina.png"></a> <span class="commodity">товаров: </span><a href="#" class="quantity">0</a>
                 <span class="sum_text">на сумму:</span> <span class="sum">0,00 грн.</span>
             </div>
-
         </div>
     </header>
 
-    <section class="search">
+    <div class="search">
+        <section class="find_box findPoAvto">
+            <div class="name name-findPoAvto">Поиск по автомобилю</div>
+            <div class="name findPoAvto_discs">Диски:</div>
+            <div class="name findPoAvto_tires">Шины:</div>
 
-    </section>
+            <a href="#" class="search_txt">поиск...</a>
+        </section>
+
+        <section class="find_box findTires">
+            <div class="name name-findTires">поиск шин</div>
+
+            <a href="#" class="search_txt search_txt-tires">поиск...</a>
+        </section>
+
+        <section class="find_box findDiscs">
+            <div class="name name-findDiscs">поиск дисков</div>
+
+            <a href="#" class="search_txt search_txt-discs">поиск...</a>
+        </section>
+
+
+    </div>
 
     <aside class="catalog">
 
