--- a/Practice/HW3/index.html
+++ b/Practice/HW3/index.html
@@ -8,7 +8,9 @@
 
 <body>
 <div class="container">
+    <!--hw3-body-->
     <div class="alltogether">
+        <!--hw3-wrapper-->
 
     <!--HEADER-->
         <div class="header">
@@ -46,7 +48,12 @@
 
     <!--FOOTER-->
         <div class="footer">
-            <ul class="main_menu footer_menu">
+            <ul class="main_menu main_menu--footer_menu">
+                <!--class="footer_menu___list"-->
+                <!--class="footer_menu___item"-->
+                <!--class="footer_menu___item:lastChild"-->
+                <!--class="footer_menu___link"-->
+                <!--class="footer_menu___link--contacts"-->
                      <li><a href="#">Главная</a>
                 </li><li><a href="#">Товары</a>
                 </li><li><a href="#">О_нас</a>
