--- a/Practice/HW3/index.html
+++ b/Practice/HW3/index.html
@@ -48,7 +48,7 @@
 
     <!--FOOTER-->
         <div class="footer">
-            <ul class="main_menu main_menu--footer_menu">
+            <ul class="main_menu footer_menu">
                 <!--class="footer_menu___list"-->
                 <!--class="footer_menu___item"-->
                 <!--class="footer_menu___item:lastChild"-->
@@ -65,3 +65,11 @@
 </div>
 
 </body>
+
+<!-- Подправить
+1. ширину картинки с великом
+2. подпрваить падинги в нижнем меню
+3. подправить стили в css, заменить все элементы на классы
+4. заментить и добавить классы в нижнем меню
+5. зкменить класс на враппер в общем блоке и оборачивающем
+-->
