edit hw3-bonus al

--- a/Practice/HW3-bonus/index.html
+++ b/Practice/HW3-bonus/index.html
@@ -57,3 +57,15 @@
     </div>
 
 </body>
+
+
+<!--
+1. Классы с маленькой буквы
+2. разобраться с txt
+3. разобраться с кантриес
+4. разобраться с врапером
+5. слоган текстом
+6. обернуть 3 кантри в блок и установить общий марджин
+7. вернуть копирайт в поток и отодвинуть его марджином на нужное расстояние
+8. убрать высоту у общего контейнера и регулировать высоту страницы высотой блоков внутри
+-->
