--- a/Practice/HW4/index.html
+++ b/Practice/HW4/index.html
@@ -112,3 +112,10 @@
      </a>
  </p>
 </body>
+
+<!--
+1. убрать селекторы по элементу из цсс поставить классы
+2. исправить логотип
+3. исправить <br/>on <span>
+4. убрать высоту блоков и управлять высотой потока с помощью маргинов внтри лежщих блоков
+-->
