--- a/Practice/HW5/index.html
+++ b/Practice/HW5/index.html
@@ -47,3 +47,12 @@
         </div>
     </div>
 </body>
+
+<!--
+1. вынести фонты в отдельный цсс файл
+2. изменить классы с большой буквы на классы с маленькими буквами
+3. заменить ОУ на что-то вменяемое
+4. убрать высоту, распереть поток маргинами между блоками
+5. разобраться с бекграундом
+6. заливка кнопка
+-->
